--- a/Backend-Tour-main/Backend-Tour-main/MERNHotelBooking-main/client/src/index.css
+++ b/Backend-Tour-main/Backend-Tour-main/MERNHotelBooking-main/client/src/index.css
@@ -65,8 +65,8 @@ select,
 .ant-picker {
   box-shadow: none !important;
   margin-top: 10px;
-  border: 1px solid black !important;
-  width: 100% !important;
+  border: 1px solid black;
+  /* width: 100%; */
   border-radius: 3px !important;
   height: 35px !important;
 }
@@ -83,7 +83,7 @@ h2 {
 }
 
 p {
-  font-size: 15px !important;
+  font-size: 15px;
 }
 
 .landing {
